Bug 478871: Switch to new_font() and default_substitute() functions from Pango API to fix compile issues with newer pango versions. r=behdad sr=roc